chore: rename book_items to book_copies
